--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,6 +9,11 @@
     <artifactId>parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+  
+  <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 
   <artifactId>common</artifactId>
   <packaging>jar</packaging>
