--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
   </modules>
 
   <properties>
-    <spring.framework.version>4.1.4.RELEASE</spring.framework.version>
-    <spring.amqp.version>1.4.3.RELEASE</spring.amqp.version>
+    <spring.framework.version>5.3.22</spring.framework.version>
+    <spring.amqp.version>2.3.16</spring.amqp.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -90,7 +90,7 @@
       <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
-        <version>1.2.14</version>
+        <version>2.18.0</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -113,12 +113,12 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
-        <version>4.1.5.RELEASE</version>
+        <version>5.3.22</version>
       </dependency>
       <dependency>
-        <groupId>taglibs</groupId>
-        <artifactId>standard</artifactId>
-        <version>1.1.2</version>
+        <groupId>org.apache.taglibs</groupId>
+        <artifactId>taglibs-standard-impl</artifactId>
+        <version>1.2.5</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
