--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -7,7 +7,10 @@
         <artifactId>parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+      </properties>
     <artifactId>worker</artifactId>
     <packaging>jar</packaging>
 
@@ -24,7 +27,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.1.1</version>
+                <version>2.0.0</version>
                 <configuration>
                     <assembleDirectory>target</assembleDirectory>
                     <programs>
